--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multiparty-express": "^0.1.9",
     "node-yaml-config": "0.0.3",
     "request": "*",
+    "require-text": "*",
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
     "xapi-tracker": "*",
