--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "cookie-parser": "1.3.5",
     "express": "4.13.1",
     "express-body-schema": "github:Synpheros/express-body-schema#master",
-    "express-fileupload": "*",
-    "get-keycloak-public-key": "*",
-    "html-pdf": "*",
-    "jsonwebtoken": "*",
-    "kafka-node": "*",
-    "keycloak-admin": "*",
-    "ltijs": "*",
+    "express-fileupload": "1.2.1",
+    "get-keycloak-public-key": "1.0.3",
+    "html-pdf": "2.2.0",
+    "jsonwebtoken": "8.5.1",
+    "kafka-node": "5.0.0",
+    "keycloak-admin": "1.13.0",
+    "ltijs": "5.6.6",
     "mongoose": "^5.7.8",
     "multiparty-express": "^0.1.9",
     "node-yaml-config": "0.0.3",
-    "request": "*",
-    "require-text": "*",
+    "request": "2.88.0",
+    "require-text": "0.0.1",
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
-    "xapi-tracker": "*",
+    "xapi-tracker": "0.9.2",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
