--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^3.1.0",
+    "axios": "^0.18.0",
     "bcrypt": "3.0.x",
     "body-parser": "1.13.2",
     "bunyan": "1.5.1",
@@ -31,6 +32,7 @@
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
     "xapi-tracker": "0.9.2",
+    "xml2js": "xml2js",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
