--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
     "xapi-tracker": "0.9.2",
-    "xml2js": "xml2js",
+    "xml2js": "0.6.2",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
