Switched to Zip API because it is faster

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "get-keycloak-public-key": "1.0.3",
     "html-pdf": "2.2.0",
     "jsonwebtoken": "8.5.1",
+    "jszip": "3.10.1",
     "kafka-node": "5.0.0",
     "keycloak-admin": "1.13.0",
     "ltijs": "5.6.6",
