--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "get-keycloak-public-key": "1.0.3",
     "html-pdf": "2.2.0",
     "jsonwebtoken": "8.5.1",
-    "jszip": "3.10.1",
     "kafka-node": "5.0.0",
     "keycloak-admin": "1.13.0",
     "ltijs": "5.6.6",
@@ -32,6 +31,7 @@
     "require-text": "0.0.1",
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
+    "unzipper": "0.10.14",
     "xapi-tracker": "0.9.2",
     "xml2js": "0.6.2",
     "yaml": "^1.7.2"
