--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "html-pdf": "2.2.0",
     "jsonwebtoken": "8.5.1",
     "kafka-node": "5.0.0",
-    "keycloak-admin": "1.13.0",
+    "@keycloak/keycloak-admin-client": "23.0.7",
     "ltijs": "5.6.6",
     "minio": "7.0.16",
     "mongoose": "^5.7.8",
