--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "async": "^3.1.0",
-    "axios": "^0.18.0",
-    "bcrypt": "3.0.x",
+    "axios": "^0.26.1",
+    "bcrypt": "5.1.1",
     "body-parser": "1.13.2",
     "bunyan": "1.5.1",
     "cookie-parser": "1.3.5",
@@ -18,7 +18,7 @@
     "express-body-schema": "github:Synpheros/express-body-schema#master",
     "express-fileupload": "1.2.1",
     "keycloak-public-key": "github:e-ucm/keycloak-public-key#master",
-    "html-pdf": "2.2.0",
+    "puppeteer": "22.4.1",
     "jsonwebtoken": "8.5.1",
     "kafka-node": "5.0.0",
     "@keycloak/keycloak-admin-client": "18.0.2",
@@ -30,7 +30,7 @@
     "request": "2.88.0",
     "require-text": "0.0.1",
     "ssl-root-cas": "1.3.x",
-    "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
+    "swagger-mongoose": "github:e-ucm/swagger-mongoose#master",
     "unzipper": "0.10.14",
     "xapi-tracker": "0.9.2",
     "xml2js": "0.6.2",
