--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "unzipper": "0.10.14",
     "xapi-tracker": "0.9.2",
     "xml2js": "0.6.2",
-    "yaml": "^1.7.2"
+    "yaml": "^1.7.2",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "mocha": "*",
