--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "xapi-tracker": "0.9.2",
     "xml2js": "0.6.2",
     "yaml": "^1.7.2",
-    "uuid": "9.0.1"
+    "uuid": "^9.0.1",
+    "bloom-filters":"^3.0.1"
   },
   "devDependencies": {
     "mocha": "*",
