--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@keycloak/keycloak-admin-client": "18.0.2",
     "ltijs": "5.6.6",
     "minio": "7.0.16",
+    "pino": "^8.16.2",
     "mongoose": "^5.7.8",
     "multiparty-express": "^0.1.9",
     "node-yaml-config": "0.0.3",
@@ -40,6 +41,7 @@
     "mocha": "*",
     "nodemon": "^2.0.4",
     "should": "*",
-    "supertest": "*"
+    "supertest": "*",
+    "pino-pretty": "^10.2.3"
   }
 }
