--- a/api.yaml
+++ b/api.yaml
@@ -84,6 +84,34 @@ paths:
             schema:
               $ref: '#/components/schemas/user'
         required: true
+  /users/{id}:
+    patch:
+      summary: Modifies the logged user, for exemple it's role.
+      tags:
+        - admins
+        - noroles
+      operationId: patchUser
+      description: |
+        Modifies the logged user, for exemple it new role to be added to the user
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+          format: id
+          description: The id of a specific user
+        - name : JSONPatch
+          in: body
+          required: true
+          schema:
+              $ref: '#/components/schemas/user'
+      responses:
+        '200':
+          description: User updated
+          schema:
+              $ref: '#/components/schemas/user'
+        '400':
+          description: 'invalid input, object invalid'
   /users/login:
     post:
       summary: logs in the user obtaining an auth token
@@ -140,26 +168,6 @@ paths:
             schema:
               $ref: '#/components/schemas/link_accounts'
         required: true
-  /users/role:
-    post:
-      tags:
-        - admins
-        - noroles
-      summary: Modifies the role of the logged user.
-      operationId: setRole
-      description: |
-        Receives the new role to be added to the user
-      responses:
-        '200':
-          description: Role updated
-        '400':
-          description: 'invalid input, object invalid'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/set_role_body'
-        required: true
   /users/events:
     post:
       summary: Receives the events of the SSO to sync the users
@@ -178,7 +186,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
+              $ref: '#/components/schemas/events'
         required: true
   /groups:
     get:
@@ -1949,11 +1957,6 @@ components:
   schemas:
     user:
       type: object
-      required:
-        - username
-        - email
-        - password
-        - role
       properties:
         username:
           type: string
@@ -1966,7 +1969,17 @@ components:
           example: "Pass12345"
         role:
           type: string
-          example: "teacher"
+          description: |
+            The role for the user to have. Some
+            examples include teacher, student 
+            teaching-assistant or researcher
+          enum:
+           - "norole"
+           - "student"
+           - "teacher"
+           - "teaching-assistant"
+           - "researcher"
+           - "administrator"
         external_entity:
           type: array
           items:
@@ -2247,18 +2260,16 @@ components:
           format: binary
       x-swagger-mongoose:
         exclude-schema: true
-    set_role_body:
+    events:
       required:
-      - role
+      - name
       type: object
       properties:
-        role:
+        name:
           type: string
-          example: teacher
+          example: eventname
           description: |
-            The role for the user to have. Some
-            examples include teacher, student 
-            teaching-assistant or researcher
+            The event name.
       x-swagger-mongoose:
         exclude-schema: true
     add_group_body:
