--- a/api.yaml
+++ b/api.yaml
@@ -967,6 +967,24 @@ paths:
       parameters:
         - $ref: '#/components/parameters/testId'
         - $ref: '#/components/parameters/user'
+    put:
+      tags:
+        - teachers
+        - students
+      summary: put the result for the activity
+      operationId: putResult
+      description: |
+        Put the result of the activity for a student
+      responses:
+        '200':
+          description: if it is openable or not
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - $ref: '#/components/parameters/testId'
+        - $ref: '#/components/parameters/user'
   /activities/{id}/hasresult:
     get:
       tags:
