--- a/api.yaml
+++ b/api.yaml
@@ -854,6 +854,25 @@ paths:
           description: 'Not found'
       parameters:
         - $ref: '#/components/parameters/testId'
+  /activities/{id}/progress:
+    get:
+      tags:
+        - teachers
+        - students
+      summary: gets the progress status of the activity
+      operationId: getCompletion
+      description: |
+        Obtains the progress status of the activity
+      responses:
+        '200':
+          description: if it is openable or not
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - $ref: '#/components/parameters/testId'
+        - $ref: '#/components/parameters/users'
   /activities/{id}/completion:
     get:
       tags:
